--- a/studio/01/index.html
+++ b/studio/01/index.html
@@ -5,14 +5,14 @@
   </head>
 
   <body>
-    <img src="1.png" style="float:left;width:470px;height:730px">
-    <img src="2.png" style="float:left;width:470px;height:730px">
-    <img src="3.png" style="float:left;width:470px;height:730px">
-    <img src="4.png" style="float:left;width:470px;height:730px">
-    <img src="5.png" style="float:left;width:470px;height:730px">
-    <img src="6.png" style="float:left;width:470px;height:730px">
-    <img src="7.png" style="float:left;width:470px;height:730px">
-    <img src="8.png" style="float:left;width:470px;height:730px">
+    <img src="1.PNG" style="float:left;width:470px;height:730px">
+    <img src="2.PNG" style="float:left;width:470px;height:730px">
+    <img src="3.PNG" style="float:left;width:470px;height:730px">
+    <img src="4.PNG" style="float:left;width:470px;height:730px">
+    <img src="5.PNG" style="float:left;width:470px;height:730px">
+    <img src="6.PNG" style="float:left;width:470px;height:730px">
+    <img src="7.PNG" style="float:left;width:470px;height:730px">
+    <img src="8.PNG" style="float:left;width:470px;height:730px">
 
   </body>
 </html>
